# xyq

./: .gitignore  Readme.md  flake.nix  shell.nix  xyq.cabal
app/: Main.hs
samples/: example.json
src/: Lib.hs
src/Lib/: Json.hs
