cabal-version:      2.4
name:               xyq
version:            0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             6e6f61
maintainer:         109554668+6e6f61@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:

executable xyq
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Paths_xyq Lib Lib.Json

    -- Versioning is handled by Nix.
    build-depends:    base, containers, optparse-applicative
    hs-source-dirs:   app src
    default-language: Haskell2010
